Fix browser history access for Edge and all browsers
- Replace non-functional API access with helpful browser-specific guides
- Add detailed step-by-step instructions for Edge, Chrome, and Firefox
- Improve user experience with clear explanations of browser security
- Provide actionable alternatives (paste URLs, bookmarks, etc.)
- Enhanced modal with better styling and user guidance

--- a/index.html
+++ b/index.html
@@ -35,10 +35,10 @@
                 <div class="access-methods">
                     <div class="method-card">
                         <div class="method-icon">🌐</div>
-                        <h4>Browser API (Chrome/Edge)</h4>
-                        <p>Directly access your history with one click</p>
-                        <button id="accessChromeHistory" class="method-btn">Access History</button>
-                        <small class="method-note">Requires permission approval</small>
+                        <h4>Browser History Guide</h4>
+                        <p>Get step-by-step instructions for your browser</p>
+                        <button id="accessChromeHistory" class="method-btn">Show Guide</button>
+                        <small class="method-note">Works with all browsers</small>
                     </div>
                     
                     <div class="method-card">
